add endpoints to get all my holidays
